Resolved java-version problem